--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
 
         <a href="about.html">About</a>
 
-        <p>This is the first paragraph</p>
+        <p>This is the <span>better</span> first paragraph</p>
     </body>
 </html>
